# ka-synthetic-data-gen

./: .env.example  .gitignore  README.md  ka_train_set_generator.ipynb  pyproject.toml
data/: labels.csv
src/: main.py  utils.py
src/generator/: gen.py  ka_dictionary_builder.py
src/generator/dictionaries/: ka_dictionary.txt  ka_dictionary_builder.py  ka_dictionary_from_docs.py  ka_dictionary_weighted.txt
synth-data/: ka_train_set_generator.ipynb
